about page nearly completed - need final touches and links to other pages

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
           class="main-logo"
         />
         <div class="nametag">
-          <h1><a href="#">JOSEPH BREIDINGER</a></h1>
+          <h1><a href="./index.html">JOSEPH BREIDINGER</a></h1>
           <h3>Professional | Coder | Artist | Life-long Student</h3>
         </div>
       </div>
       <ul class="nav-bar">
-        <li><a href="#"></a>About</li>
-        <li><a href="#"></a>Portfolio</li>
-        <li><a href="#"></a>Contact</li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./portfolio.html">Portfolio</a></li>
+        <li><a href="./contact.html"></a></li>
       </ul>
     </nav>
     <section class="homepage">
