--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ul class="nav-bar">
         <li><a href="./about.html">About</a></li>
         <li><a href="./portfolio.html">Portfolio</a></li>
-        <li><a href="./contact.html"></a></li>
+        <li><a href="./contact.html">Contact</a></li>
       </ul>
     </nav>
     <section class="homepage">
