Added portfolio page and started contact page

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <nav class="top-ribbon">
       <div>
         <img
-          src="./assets/pw-jblogo-00.png"
+          src="./assets/pw-jblogo-03.png"
           alt="Joseph Breidinger"
           class="main-logo"
         />
@@ -24,9 +24,9 @@
         </div>
       </div>
       <ul class="nav-bar">
-        <li><a href="./about.html"></a>About</li>
-        <li><a href="#"></a>Portfolio</li>
-        <li><a href="#"></a>Contact</li>
+        <li><a href="#">About</a></li>
+        <li><a href="./portfolio.html">Portfolio</a></li>
+        <li><a href="./contact.html">Contact</a></li>
       </ul>
     </nav>
     <section class="about-section">
@@ -46,5 +46,12 @@
             <img src="./assets/pw-img-04.jpg" alt="Recent Headshot" class="recent picture"/>
         </div>
     </section>
+    <footer>
+      <ul class="contact-icons">
+        <li><a href="#">Git</a></li>
+        <li><a href="#">Discord</a></li>
+        <li><a href="#">LinkedIn</a></li>
+      </ul>
+    </footer>
 </body>
 </html>
