added contact page and tweaked a few details on the other pages

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <nav class="top-ribbon">
       <div>
         <img
-          src="./assets/pw-jblogo-03.png"
+          src="./assets/pw-jblogo-00.png"
           alt="Joseph Breidinger"
           class="main-logo"
         />
@@ -33,16 +33,16 @@
         <div class="about-panel">
             <img src="./assets/pw-img-02.jpg" alt="Smiling Chef" class="artist picture"/>
             <h3>Artistry</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem nihil iusto atque quidem ea rem vel. Voluptatum nisi, voluptate iste mollitia, eius maxime tempore cupiditate, dolorem ducimus officia necessitatibus labore?</p>
+            <p>"My background in culinary arts has deeply shaped my creative instincts, teaching me how to innovate under pressure while maintaining consistency and quality. In the fast-paced environment of professional kitchens, I learned to balance artistic vision with operational realities—where budgeting, staffing, and timing are just as critical as flavor and presentation. This experience honed my ability to adapt creatively within constraints, collaborate effectively, and lead with both imagination and discipline."</p>
             </div>
         <div class="about-panel">
             <h3>Professionalism</h3>
-            <p id="color-correct">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae sit porro id officiis adipisci? Neque autem, tempore dignissimos officia animi dolores obcaecati, veritatis corporis tenetur assumenda nostrum eveniet ipsa provident.</p>
+            <p id="color-correct-1">"My background has shaped me into a well-rounded professional who thrives under pressure and leads with clarity and accountability. I have learned how to balance creative thinking with practical execution. These experiences have sharpened my communication skills, strengthened my sense of responsibility, and taught me how to guide teams toward shared goals — even in dynamic, high-stakes environments."</p>
             <img src="./assets/pw-img-03.jpg" alt="Professional Portrait" class="professional picture"/>
         </div>
         <div class="about-panel">
             <h3>Driven by Technology</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ab excepturi quasi id delectus repellendus sunt recusandae, pariatur quis quibusdam quos totam officiis voluptate quo consectetur perspiciatis error, voluptates alias!</p>
+            <p>"Growing up during the tech boom, I was always drawn to how digital tools could solve real-world problems. That curiosity evolved into a passion for programming and automation, where I now channel my creativity and discipline into building efficient, accessible, and visually engaging web experiences. I’m driven by continuous learning and excited by the challenge of turning ideas into practical, scalable solutions."</p>
             <img src="./assets/pw-img-04.jpg" alt="Recent Headshot" class="recent picture"/>
         </div>
     </section>
