--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./about.css" />
     <link rel="stylesheet" href="/index.css" />
     <link rel="stylesheet" href="/global.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu"
+    />
     <title>Joseph Breidinger - Portfolio</title>
   </head>
   <body>
@@ -52,7 +56,7 @@
             type="email"
             id="email"
             name="email"
-            placeholder="Name"
+            placeholder="Email"
             required
           />
 
